Dole out a heart after beating the airplane boss.

--- a/data/level/Seaside/secluded-hut.cfg
+++ b/data/level/Seaside/secluded-hut.cfg
@@ -112,9 +112,11 @@
 									set(level.player.animation, 'emote_geez'),
 									level.player, [~Yeah.\\nWho WAS that guy?!~],
 									set(Berd.animation, 'emote_wry'),
-									Berd, [~One of Milgram's henchmen, no doubt.~],
+									Berd, [~I'm not sure, but he dropped this...~],
+									spawn('generic_acquirable_inventory_item',frogatto.mid_x,frogatto.mid_y, {kind: enum item_heart_container}),
 									set(Berd.animation, 'emote_confused'),
-									[~They may have seen me talking to you,\\nI can't be sure.~],
+									[~If I was pressed for an answer,\\nI think that fellow worked for <em>Milgram</em>.~],
+									[~They may have seen me talking to you,\\nearlier, I can't be sure.~],
 									set(level.player.animation, 'emote_confused'),
 									level.player, [~Wait, what?  Milgram?~],
 									set(level.player.animation, 'emote_geez'),
@@ -156,7 +158,8 @@
 									lib.audio.play_music(me,'FrogattoChill.ogg'),
 									schedule(1, ; set(level.lock_screen, null)),
 									level.player.store_event('berds_post_airplane_boss_speech',1))
-									where Berd = (obj berd_npc <- get_object_or_die(level,'berd_man'))",
+									where Berd = (obj berd_npc <- get_object_or_die(level,'berd_man'))
+									where frogatto = level.player",
 			"type": "tree_seaside1",
 			"x": -160,
 			"y": 168
