Enhanced the new yellow-ish seaside wall tiles, and added some MTPs for them.  Changed the palette values so the grooves in the wall are a bit less dark.

--- a/data/level/Seaside/crevice-village-house-1.cfg
+++ b/data/level/Seaside/crevice-village-house-1.cfg
@@ -1153,6 +1153,7 @@
 	"dimensions": [-416,-2336,3231,1570],
 	"id": "crevice-village-house-1.cfg",
 	"music": "8bitness.ogg",
+	"palettes": ["interior_seaside_yellow","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
