--- a/data/level/Seaside/crevice-village-house-4-backroom.cfg
+++ b/data/level/Seaside/crevice-village-house-4-backroom.cfg
@@ -511,6 +511,7 @@
 	"dimensions": [-1088,-384,1474,2272],
 	"id": "crevice-village-house-4-backroom.cfg",
 	"music": "Hmmmm.ogg",
+	"palettes": ["interior_seaside_yellow","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
