--- a/data/level/Seaside/liberated-crevice-village-house-3.cfg
+++ b/data/level/Seaside/liberated-crevice-village-house-3.cfg
@@ -215,6 +215,7 @@
 	"dimensions": [-160,-1664,1283,-510],
 	"id": "liberated-crevice-village-house-3.cfg",
 	"music": "Hmmmm.ogg",
+	"palettes": ["interior_seaside_yellow","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
