--- a/data/level/Seaside/crevice-village-house-2.cfg
+++ b/data/level/Seaside/crevice-village-house-2.cfg
@@ -1207,6 +1207,7 @@
 	"dimensions": [-1440,-2592,1507,1738],
 	"id": "crevice-village-house-2.cfg",
 	"music": "8bitness.ogg",
+	"palettes": ["interior_seaside_yellow","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
