--- a/data/level/Seaside/crevice-village-house-3.cfg
+++ b/data/level/Seaside/crevice-village-house-3.cfg
@@ -340,6 +340,7 @@
 	"dimensions": [-160,-2432,1282,-511],
 	"id": "crevice-village-house-3.cfg",
 	"music": "Hmmmm.ogg",
+	"palettes": ["interior_seaside_yellow","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
