--- a/data/level/Seaside/crevice-village-house-4.cfg
+++ b/data/level/Seaside/crevice-village-house-4.cfg
@@ -1031,6 +1031,7 @@
 	"dimensions": [-288,-1088,3137,2405],
 	"id": "crevice-village-house-4.cfg",
 	"music": "Hmmmm.ogg",
+	"palettes": ["interior_seaside_yellow","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
