--- a/data/level/Seaside/liberated-crevice-village-house-1.cfg
+++ b/data/level/Seaside/liberated-crevice-village-house-1.cfg
@@ -543,6 +543,7 @@
 	"dimensions": [-416,-544,2722,1571],
 	"id": "liberated-crevice-village-house-1.cfg",
 	"music": "8bitness.ogg",
+	"palettes": ["interior_seaside_yellow","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
