--- a/data/level/Seaside/liberated-crevice-village-house-4.cfg
+++ b/data/level/Seaside/liberated-crevice-village-house-4.cfg
@@ -335,6 +335,7 @@
 	"dimensions": [-192,-1088,3137,2405],
 	"id": "liberated-crevice-village-house-4.cfg",
 	"music": "Hmmmm.ogg",
+	"palettes": ["interior_seaside_yellow","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
