--- a/data/tiles.cfg
+++ b/data/tiles.cfg
@@ -57,7 +57,7 @@ nrk: "brown-rock.png_MTP_corners.cfg,brown-rock.png_MTP_sides.cfg",
 snd: "sand.png-MTP.cfg",
 
 ## HOUSE INTERIORS:
-ins: "interior.png_STP_back_wall.cfg",
+ins: "interior.png_MTP_back_wall.cfg,interior.png_STP_back_wall.cfg",
 int: "interiors.png_MTP_walls.cfg",
 iss: "interiors.png_MTP_walls.cfg",
 iel: "interior-elevators.png_MTP.cfg",
