Added a bunch of additional MTPs to the seaside plaster textures.

--- a/data/tiles/interior.png_MTP_back_wall.cfg
+++ b/data/tiles/interior.png_MTP_back_wall.cfg
@@ -3,7 +3,7 @@ palettes: "@include data/palettes.cfg:dungeon_palettes",
 
 multi_tile_pattern: [
 	{
-		chance: 10,
+		chance: 20,
 		pattern: "	ins , ins        , ins        , ins       
 					ins , ins->tile1 , ins->tile2 , ins
 					ins , ins->tile3 , ins->tile4 , ins
@@ -19,6 +19,54 @@ multi_tile_pattern: [
 				range: {
 					image: "tiles/interior.png",
 					tiles: "ds",
+					from: "tile1",
+					to: "tile4",
+				},
+			},
+			{
+				range: {
+					image: "tiles/interior.png",
+					tiles: "du",
+					from: "tile1",
+					to: "tile4",
+				},
+			},
+			{
+				range: {
+					image: "tiles/interior.png",
+					tiles: "fq",
+					from: "tile1",
+					to: "tile4",
+				},
+			},
+			{
+				range: {
+					image: "tiles/interior.png",
+					tiles: "fs",
+					from: "tile1",
+					to: "tile4",
+				},
+			},
+			{
+				range: {
+					image: "tiles/interior.png",
+					tiles: "fu",
+					from: "tile1",
+					to: "tile4",
+				},
+			},
+			{
+				range: {
+					image: "tiles/interior.png",
+					tiles: "hq",
+					from: "tile1",
+					to: "tile4",
+				},
+			},
+			{
+				range: {
+					image: "tiles/interior.png",
+					tiles: "hs",
 					from: "tile1",
 					to: "tile4",
 				},
