Added a 3x3 MTP to the interior walls.

--- a/data/tiles/interior.png_MTP_back_wall.cfg
+++ b/data/tiles/interior.png_MTP_back_wall.cfg
@@ -73,5 +73,20 @@ multi_tile_pattern: [
 			},
 		],
 	},
+	{
+		chance: 40,
+		pattern: "  ins  , ins        , ins        , ins        , ins 
+					ins  , ins->tile1 , ins->tile2 , ins->tile3 , ins
+                    ins  , ins->tile4 , ins->tile5 , ins->tile6 , ins
+                    ins  , ins->tile7 , ins->tile8 , ins->tile9 , ins
+					ins  , ins        , ins        , ins        , ins ",
+		range: {
+			image: "tiles/interior.png",
+			tiles: "hn",
+			from: "tile1",
+			to: "tile9",
+		},
+	},
+
 ],
 }
