--- a/data/level/Seaside/secluded-hut-interior.cfg
+++ b/data/level/Seaside/secluded-hut-interior.cfg
@@ -728,7 +728,7 @@
 	"dimensions": [0,-320,1793,832],
 	"id": "secluded-hut-interior.cfg",
 	"music": "FrogattoChill.ogg",
-	"palettes": ["interior_seaside_yellow","chrome_to_brass"],
+	"palettes": ["interior_seaside_rustic","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
