--- a/data/objects/props/utilities/ceiling_lamp_silver.cfg
+++ b/data/objects/props/utilities/ceiling_lamp_silver.cfg
@@ -42,11 +42,27 @@ properties: {
 		})",
 		persistent: false,
 	},
+
+	light_bloom: { 
+		type: "obj effects_attache_glow_source", 
+		init: "object('effects_attache_glow_source', mid_x, mid_y, {
+			time_to_die: 0,
+			parent: me,
+			custom_relative_pos_default: {mid_x: 0,	mid_y: 25},
+			flicker_type: enum window_light,
+			graphics: enum soft_glow_small,
+	//		external_process_callback: me.lightstream.set_alpha_value,
+			scale_factor: 1.0,
+		})",
+		persistent: false,
+	},
+	
 	
 	transient_obj_constructor: "[
 		add_object(light_cone),
 		add_object(light_circular),
 		add_object(lamp_spark_particles),
+		add_object(light_bloom),
 	]",
 },
 
