Added light blooms to the seaside interior windows.

--- a/data/object_prototypes/general/effects_attache_glow.cfg
+++ b/data/object_prototypes/general/effects_attache_glow.cfg
@@ -23,7 +23,7 @@ properties: {
 											enum window_light, (sin( cycle * 2.5 ) * 3 + sin( cycle * 4 ) * 2 + sin( cycle * 6.5 ) * 2)/0.36,
 											0)",
 
-	graphics: { type: "enum { firey, soft_glow_small, soft_glow, soft_glow_green, gazer_flare }",  init: "enum firey" },
+	graphics: { type: "enum { firey, soft_glow_small, soft_glow_big, soft_glow_green, gazer_flare }",  init: "enum firey" },
 	set_graphic: "commands :: set(animation, switch(graphics,
 							enum soft_glow_small,		'soft_glow_small',
 							enum soft_glow_big,			'soft_glow_big',
@@ -101,7 +101,7 @@ animation: [{
 		image: "effects/silhouette/soft-glow-small.png",
 		rect: [0,0,63,63],
 	},{
-		id: "soft_glow",
+		id: "soft_glow_big",
 		image: "effects/silhouette/soft-glow.png",
 		rect: [0,0,255,255],
 	},{
