--- a/data/objects/props/furniture/seaside_interior_window_large.cfg
+++ b/data/objects/props/furniture/seaside_interior_window_large.cfg
@@ -1,10 +1,35 @@
 {
 id: "seaside_interior_window_large",
 zorder: "@include data/zorder.cfg:interior_back_wall_decor",
-on_create: "spawn('seaside_interior_window_large.lightstream',midpoint_x,y+112,facing)",
+
+prototype: ["transient_object"],
+
 editor_info: {
 	category: "decor, seaside",
 },
+
+properties: {
+#-------------------------- vars --------------------------#
+	light_bloom: { 
+		type: "obj effects_attache_glow_source", 
+		init: "object('effects_attache_glow_source', mid_x, mid_y, {
+			time_to_die: 0,
+			parent: me,
+			custom_relative_pos_default: {mid_x: 0,	mid_y: 0},
+			flicker_type: enum window_light,
+			graphics: enum soft_glow_big,
+	//		external_process_callback: me.lightstream.set_alpha_value,
+			scale_factor: 0.65,
+		})",
+		persistent: false,
+	},
+	
+	transient_obj_constructor: "[
+		spawn('seaside_interior_window_large.lightstream',midpoint_x,y+112,facing),
+		add_object(light_bloom),
+	]",
+},
+
 animation: {
 	id: "normal",
 	image: "tiles/interior.png",
