Added a beige seaside interior palette, and put it on a few houses.

--- a/data/level/Seaside/crevice-village-house-3-backroom.cfg
+++ b/data/level/Seaside/crevice-village-house-3-backroom.cfg
@@ -467,7 +467,7 @@
 	"dimensions": [-544,-2976,2245,-1759],
 	"id": "crevice-village-house-3-backroom.cfg",
 	"music": "Hmmmm.ogg",
-	"palettes": ["interior_seaside_yellow","chrome_to_brass"],
+	"palettes": ["interior_seaside_beige","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
