--- a/data/level/Seaside/to-nenes-house-inside.cfg
+++ b/data/level/Seaside/to-nenes-house-inside.cfg
@@ -597,6 +597,7 @@
 	"dimensions": [-448,-384,1855,1318],
 	"id": "to-nenes-house-inside.cfg",
 	"music": "FrogattoChill.ogg",
+	"palettes": ["interior_seaside_beige","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
