Shuffled a few seaside interior palettes around.

--- a/data/level/Seaside/chopple-shop-interior.cfg
+++ b/data/level/Seaside/chopple-shop-interior.cfg
@@ -300,6 +300,7 @@
 	"dimensions": [-288,-64,1503,704],
 	"id": "chopple-shop-interior.cfg",
 	"music": "NeoShop.ogg",
+	"palettes": ["interior_seaside_yellow","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
