--- a/data/level/Seaside/liberated-crevice-village-house-2.cfg
+++ b/data/level/Seaside/liberated-crevice-village-house-2.cfg
@@ -193,7 +193,7 @@
 	"dimensions": [-384,-256,1121,704],
 	"id": "liberated-crevice-village-house-2.cfg",
 	"music": "8bitness.ogg",
-	"palettes": ["interior_seaside_yellow","chrome_to_brass"],
+	"palettes": ["interior_seaside_rustic","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
