Added a ridiculous palette for the elder's house.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -313,9 +313,14 @@ properties: {
 	]",
 
 	hax_elder: "[  /* just beat the elder's house fight */
+		;hax_mtm
+		
 		;set_item_amount(enum item_magic_map, 1),
 		;set_item_amount(enum item_heart_container, 4), //unlike `hax_tempo`, we're assuming you haven't hunted around and bought extra hearts.
 		;add_item(enum item_fire_breath_talisman, 1),
+		
+		store_event('town_elder_fight_won',1),
+		store_event('town_elder_post_fight_speech',1),
 	]",
 	
 	hax_tempo: "[  /* being at tempo village */
