--- a/data/level/Seaside/crevice-village-house-elder.cfg
+++ b/data/level/Seaside/crevice-village-house-elder.cfg
@@ -744,6 +744,7 @@
 	"dimensions": [-416,-288,1410,1025],
 	"id": "crevice-village-house-elder.cfg",
 	"music": "ElderChief.ogg",
+	"palettes": ["interior_seaside_ostentatious","chrome_to_brass"],
 	"preloads": "",
 	"segment_height": 0,
 	"segment_width": 0,
