Added a bunch of cheat codes for various progression states through the game.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -278,23 +278,7 @@ properties: {
 
 	
 	
-#-------------------------- cheat codes --------------------------#
-	//show sound logging.
-
-	logsounds: "
-	if(lib.sound.log_sounds, [
-		remove_object(cur_log),
-		set(lib.sound.log_sounds, false),
-
-	] where cur_log = find(level.chars, value is obj sound_log), [
-		set(lib.sound.log_sounds, true),
-		spawn('sound_log', {
-			x: 0, y: 0,
-		})
-	])
-	",
-
-
+#-------------------------- progression cheat codes --------------------------#
 	/*
 		In the spirit of early cheat codes, these codes are meant to make testing later levels more balanced against how powerful the player would normally be on such a level; they immediately empower the player as though the player has played that far into the game, and has gotten all of the appropriate upgrades for that point in the game.  This way we don't fall into making the levels easy enough to pass on a mere 2 hearts.  We also try to set major event flags, so that if i.e. you enter a cheat code for a certain boss fight (like beating the gazer boss), it also flags the associated NPC conversations so you're on a quick path to test that.
 		
@@ -302,6 +286,8 @@ properties: {
 		
 		We have a whole family of these for various points in the game.  Note that subsequent commands usually "re-run" earlier commands, so we don't have to copy-paste tons of event flags.
 	*/
+
+
 
 	hax_mtm: "[  /* being past Mortimer's house */
 		;set_item_amount(enum item_magic_map, 1),
@@ -323,29 +309,92 @@ properties: {
 		store_event('town_elder_post_fight_speech',1),
 	]",
 	
-	hax_tempo: "[  /* being at tempo village */
+	hax_tempo: "[  /* being at tempo village, but not having talked to anyone yet */
+		;hax_elder
+	
 		;set_item_amount(enum item_magic_map, 1),
 		;set_item_amount(enum item_heart_container, 5), //we assume you've gotten the hearts from the airplane boss, from ralph, and also probably found or bought one extra one.
 		;add_item(enum item_fire_breath_talisman, 1),
 	]",
 
 	
-	hax_gazer: "[ /* having beaten the gazer boss. */
+	hax_gazer: "[ /* having beaten the gazer boss, talked to prospera beforehand, but NOT talked to prospera afterwards. */
+		;hax_tempo
+
 		;set_item_amount(enum item_magic_map, 1),
-		;set_item_amount(enum item_heart_container, 4),
+		;set_item_amount(enum item_heart_container, 5),
 		;add_item(enum item_fire_breath_talisman, 1),
 		;add_item(enum item_energy_shot_talisman, 1),
+
+		store_event('introduced_to_imoti', 1),
+		store_event('frogatto_has_seen_tempo_village_force_field', 1),
+		store_event('frogatto_knows_about_prospera_passphrase', 1),
+		store_event('frogatto_has_met_prospera',1),
+		store_event('prosperas_elevator_active',1),
+		store_event('finished_initial_exterior_prospera_conversation',1),
+		store_event('finished_initial_prospera_conversation',1),
+		store_event('defeated_gazer_boss',1),
 	]",
+
+
+	hax_prospera: "[ /* having both beaten the gazer boss, and been shown prospera's workshop. */
+		;hax_gazer
+	
+		;set_item_amount(enum item_magic_map, 1),
+		;set_item_amount(enum item_heart_container, 5),
+		;add_item(enum item_fire_breath_talisman, 1),
+		;add_item(enum item_energy_shot_talisman, 1),
+
+
+		store_event('finished_post_gazer_boss_conversation',1),
+		store_event('prosperas-workshop-unlocked',1),
+	]",
+
+
 	
 	hax_moth: "[ /* having beaten the moth boss. */
+		;hax_gazer
+
+
 		;set_item_amount(enum item_magic_map, 1),
-		;set_item_amount(enum item_heart_container, 4),
+		;set_item_amount(enum item_heart_container, 6),
 		;add_item(enum item_fire_breath_talisman, 1),
 		;add_item(enum item_energy_shot_talisman, 1),
 		;add_item(enum item_homing_shot_talisman, 1),
+
+		store_event('moth_boss_fight_won',1),
+		store_event('moth_boss_postfight_dialogue',1),
+	]",
+
+	hax_mushroom: "[ /* having beaten the mushroom boss. */
+		;hax_gazer
+
+
+		;set_item_amount(enum item_magic_map, 1),
+		;set_item_amount(enum item_heart_container, 6),
+		;add_item(enum item_fire_breath_talisman, 1),
+		;add_item(enum item_energy_shot_talisman, 1),
+		;add_item(enum item_acid_shot_talisman, 1),
+		
+		store_event('mushroom_boss_fight_won',1),
+		store_event('missing_berd_post_mushroom_boss_speech',1),
 	]",
 
 
+
+
+
+#-------------------------- generic cheat codes --------------------------#
+	
+	choppa: "set(_jump_cheat,true)",
+	smite: "map(filter(level.chars, value is obj hittable), if(value.team = 'evil', value.force_death()))",
+	supes: "[hax,choppa,set(invincible,-1)]",
+	thor1: "[set(_jump_cheat,false),set(invincible,0)]",
+	lucre: "[
+				acquire_gold(20000),
+				map(all_trophy_items, add_item(value.id, 1)),
+				map(all_trophy_items, store_event( enum_to_string(value.id) + '_acquired', 1)),
+			]",
 
 	hax: "[
 		map(range(size(ability_list_full)), schedule(value,fire_event('hax'))),
@@ -364,16 +413,22 @@ properties: {
 		map(super_ability_list_full, set_item_amount(value,1)),
 		]",	
 
-	
-	choppa: "set(_jump_cheat,true)",
-	smite: "map(filter(level.chars, value is obj hittable), if(value.team = 'evil', value.force_death()))",
-	supes: "[hax,choppa,set(invincible,-1)]",
-	thor1: "[set(_jump_cheat,false),set(invincible,0)]",
-	lucre: "[
-				acquire_gold(20000),
-				map(all_trophy_items, add_item(value.id, 1)),
-				map(all_trophy_items, store_event( enum_to_string(value.id) + '_acquired', 1)),
-			]",
+
+	//show sound logging.
+
+	logsounds: "
+	if(lib.sound.log_sounds, [
+		remove_object(cur_log),
+		set(lib.sound.log_sounds, false),
+
+	] where cur_log = find(level.chars, value is obj sound_log), [
+		set(lib.sound.log_sounds, true),
+		spawn('sound_log', {
+			x: 0, y: 0,
+		})
+	])
+	",
+
 
 
 #-------------------------- inventory handlers --------------------------#
