Cleaned up the Frogatto master-config.cfg sample and added a log file dest.

--- a/master-config.cfg
+++ b/master-config.cfg
@@ -1,5 +1,7 @@
+//This config file holds engine configuration parameters for the release version of Frogatto.
 {
-id: "frogatto",
-name: "Frogatto & Friends",
-arguments: ["--module=frogatto"]
+	arguments: [
+		"--module=frogatto4", //Renamed default module frogatto to frogatto4, because we don't want to choke on an old savefile from 1.3 or vice-versa.
+		"--log-file=log.txt", //Logs on Windows do not appear by default.
+	],
 }
