Finished up the list of cheat codes for obvious progression points.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -374,7 +374,7 @@ properties: {
 		;set_item_amount(enum item_heart_container, 6),
 		;add_item(enum item_fire_breath_talisman, 1),
 		;add_item(enum item_energy_shot_talisman, 1),
-		;add_item(enum item_acid_shot_talisman, 1),
+		;add_item(enum item_acid_breath_talisman, 1),
 		
 		store_event('mushroom_boss_fight_won',1),
 		store_event('missing_berd_post_mushroom_boss_speech',1),
@@ -385,33 +385,84 @@ properties: {
 
 
 #-------------------------- generic cheat codes --------------------------#
-	
-	choppa: "set(_jump_cheat,true)",
-	smite: "map(filter(level.chars, value is obj hittable), if(value.team = 'evil', value.force_death()))",
-	supes: "[hax,choppa,set(invincible,-1)]",
-	thor1: "[set(_jump_cheat,false),set(invincible,0)]",
-	lucre: "[
-				acquire_gold(20000),
-				map(all_trophy_items, add_item(value.id, 1)),
-				map(all_trophy_items, store_event( enum_to_string(value.id) + '_acquired', 1)),
-			]",
+	/*
+		Unlike the above stuff, these are just generic cheat codes.  Arguably `hax` is maybe ultra-lategame progression for frogatto, but these are just sort of divorced from the whole idea.
+	*/
 
-	hax: "[
-		map(range(size(ability_list_full)), schedule(value,fire_event('hax'))),
+
+	
+		//activate a weird loophole where you don't run out of upward momentum whilst jumping;  you jump up, and as long as you keep holding the button, it's just up up and up.
+	choppa: "set(_jump_cheat,true)",
+	
+		//kill every enemy in the level.
+	smite: "map(filter(level.chars, value is obj hittable), if(value.team = 'evil', value.force_death()))",
+
+	supes: "[  //superman mode
+		hax,
+		choppa,
+		set(invincible,-1),
+	]",
+	
+	thor1: "[  //take the particularly 'cheat mode' powers away so you can fight normally.  Useful if you wanted to fly to cheese through some obstacles, but the thing you want to test requires you to actually be vulnerable.
+		set(_jump_cheat,false),
+		set(invincible,0),
+	]",
+	
+	lucre: "[  //all the money
+		acquire_gold(20000),
+		map(all_trophy_items, add_item(value.id, 1)),
+		map(all_trophy_items, store_event( enum_to_string(value.id) + '_acquired', 1)),
+	]",
+
+	hax: "[  //give me all the powerups.
+		set(mana, 5000), 
+		;set_item_amount(enum item_heart_container, 6),
+
 		;set_item_amount(enum item_tongue_extension, 2),
 		;set_item_amount(enum item_greater_mana_talisman, 1),
 		;set_item_amount(enum item_lesser_mana_talisman, 1),
 		;set_item_amount(enum item_creature_field_guide, 1),
 		;set_item_amount(enum item_magic_map, 1),
-		;set_item_amount(enum item_heart_container, 5),  //do not use add - use 'set' or this is not idempotent.
 		;add_item(enum item_acquirable_attractor, 1),
+
+
+		;add_item(enum item_fire_breath_talisman, 1),
+		;add_item(enum item_energy_shot_talisman, 1),
+		;add_item(enum item_acid_shot_talisman, 1),
+		;add_item(enum item_ice_corona_talisman, 1),
+		;add_item(enum item_acid_breath_talisman, 1),
+		;add_item(enum item_fire_shot_talisman, 1),
+
+		;add_item(enum item_super_fire_pendant, 1),
+		;add_item(enum item_super_energy_pendant, 1),
+		;add_item(enum item_super_arcane_pendant, 1),
+		;add_item(enum item_super_acid_pendant, 1),
+		//  ;add_item(enum item_super_ice_pendant, 1),  omitted; freezing sometimes breaks stuff
 	]",
-	hax_: "[
-		set(mana, 5000), 
-		map(secondary_item_list_full, set_item_amount(value,1)),
-		map(ability_list_full, set_item_amount(value,1)),
-		map(super_ability_list_full, set_item_amount(value,1)),
-		]",	
+
+#-------------------------- omnibus cheat codes --------------------------#
+	/*
+		Last but not least, we've got a final few cheat codes to test 'future content'.  These just add *everything*; they scan the item lists and add every conceivable item or ability we've got, even if it's broken.
+		
+		These probably aren't fun to use for 'cheating'.  A lot of these will just be outright broken, and might just crash the game.
+	*/
+
+	leet: "[
+		hax
+		;
+		map(secondary_item_list_full, ;set_item_amount(value,1)),
+		map(ability_list_full, ;set_item_amount(value,1)),
+		map(super_ability_list_full, ;set_item_amount(value,1)),	
+	]",
+
+	shaggy: "[  //real.  ultimate.  power.
+		leet,
+		choppa,
+		set(invincible,-1),
+	]",
+
+
+
 
 
 	//show sound logging.
@@ -1643,10 +1694,6 @@ properties: {
 },
 
   
-	  
-on_hax: "hax_",
-
-
 
 
 
