Kludged in descriptions for most of prospera's shop items.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -348,6 +348,7 @@ properties: {
 
 		store_event('finished_post_gazer_boss_conversation',1),
 		store_event('prosperas-workshop-unlocked',1),
+		store_event('introduced_prosperas_workshop', 1),
 	]",
 
 
