--- a/data/items.cfg
+++ b/data/items.cfg
@@ -109,6 +109,7 @@
 		name: "~No Items~",
 		id: "@eval enum item_null",
 		description: "~A placeholder with graphics info in the event that you don't have any actual items in a category.~",
+		short_store_description: "[~YOU GET NOTHING!  YOU LOSE!\\nGOOD DAY, SIR!~]",
 		item_category: "@eval enum passive",
 		anim_rect: [1,1,22,22],
 		anim_image: "props/items2.png",
@@ -126,6 +127,7 @@
 		name: "~Tongue~",
 		id: "@eval enum item_tongue",
 		description: "~The preferred tool of frogs everywhere. Strong enough to aid in swallowing most objects, edible or otherwise.~",
+		short_store_description: "[~The height of business acumen is being able\\nto convincine a poor frog to buy his own tongue.~]",
 		count_limit: 1,
 		item_category: "@eval enum primary_ability",
 		anim_rect: [1,264,17,279],
@@ -135,6 +137,7 @@
 		name: "~Fire Breath Talisman~",
 		id: "@eval enum item_fire_breath_talisman",
 		description: "~Lets you breathe fire at a short distance. Careful around foliage!~",
+		short_store_description: "[~This lets you breath fire at short range\\nto incinerate anything in reach.~]",
 		count_limit: 1,
 		item_category: "@eval enum primary_ability",
 		anim_rect: [1,196,17,211],
@@ -145,6 +148,7 @@
 		name: "~Fire Shot Talisman~",
 		id: "@eval enum item_fire_shot_talisman",
 		description: "~Lets you fire small bursts of flame that travel in a long arc.~",
+		short_store_description: "[~This lets shoot little puffs of fire that travel\\na really long way.  They can bounce to\\nget around obstacles.~]",
 		count_limit: 1,
 		costs_trophies_instead_of_coins: true,
 		item_category: "@eval enum primary_ability",
@@ -156,6 +160,7 @@
 		name: "~Energy Shot Talisman~",
 		id: "@eval enum item_energy_shot_talisman",
 		description: "~Allows the user to channel electricity through their fingertips to create an elemental projectile. Remember to steady your aim when firing!~",
+		short_store_description: "[~This fires rapid blasts of energy that hit\\nfor a little bit of damage, each.~]",
 		count_limit: 1,
 		item_category: "@eval enum primary_ability",
 		anim_rect: [1,145,17,160],
@@ -166,6 +171,7 @@
 		name: "~Acid Shot Talisman~",
 		id: "@eval enum item_acid_shot_talisman",
 		description: "~Lets you spit lances of acid that pierce through multiple enemies.~",
+		short_store_description: "[~This lets you fire out shots of acid,\\nwhich travel in a straight line.\\nThey'll pass through enemies\\nand can hurt whole rows of them.~]",
 		count_limit: 1,
 		costs_trophies_instead_of_coins: true,
 		item_category: "@eval enum primary_ability",
@@ -177,6 +183,7 @@
 		name: "~Homing Talisman~",
 		id: "@eval enum item_homing_shot_talisman",
 		description: "~A talisman radiating astral power beyond normal realms of magic. Allows the user to send malicious od which will track down and remove targets from existence. Probably cursed.~",
+		short_store_description: "[~This lets you fire balls of dark energy,\\nwhich seek out hostile targets automatically.~]",
 		count_limit: 1,
 		item_category: "@eval enum primary_ability",
 		anim_rect: [1,213,17,228],
@@ -187,6 +194,7 @@
 		name: "~Acid Breath Talisman~",
 		id: "@eval enum item_acid_breath_talisman",
 		description: "~Due to the nature of allowing the user to literally excrete globs of acid, use of this talisman is fatal to everyone but Frogatto, who can stomach absolutely anything.~",
+		short_store_description: "[~This lets you spit blobs of acid that will\\nland on the ground and sizzle for a while.~]",
 		costs_trophies_instead_of_coins: true,
 		count_limit: 1,
 		item_category: "@eval enum primary_ability",
@@ -198,6 +206,7 @@
 		name: "~Ice Corona Talisman~",
 		id: "@eval enum item_ice_corona_talisman",
 		description: "~Blasts the area around the user with a frigid polar wind.  Freezes most living creatures in place, rendering them helpless.~",
+		short_store_description: "[~This lets you freeze opponents in place,\\nwhich will leave them helpless against you.~]",
 		count_limit: 1,
 		costs_trophies_instead_of_coins: true,
 		item_category: "@eval enum primary_ability",
@@ -320,6 +329,7 @@
 		name: "~Skipback Sigil~",
 		id: "@eval enum item_skipback_sigil",
 		description: "~A magic brooch that allows you to go back to a place you clearly remember.~",
+		short_store_description: "[~A magic brooch that allows you to\\ngo back to a place you clearly remember.~]",
 		count_limit: 2,
 		item_category: "@eval enum secondary_item",
 		costs_trophies_instead_of_coins: true,
@@ -333,6 +343,7 @@
 		name: "'Generic Usable Item'", //Note: Not marked as translatable because should never be seen in game.
 		id: "@eval enum item_generic_usable",
 		description: "'Something hacked together by an unassuming programmer to test a new system.'",
+		short_store_description: "[~Generic Usable Item.~]",
 		count_limit: 2,
 		item_category: "@eval enum secondary_item",
 		anim_rect: [1,247,17,262],
@@ -343,6 +354,7 @@
 		name: "~Ammo Creating Item~",
 		id: "@eval enum item_ammo_creating",
 		description: "~Lets you create a throwable sphere at the cost of mana.~",
+		short_store_description: "[~Lets you create a throwable sphere\\nat the cost of mana.~]",
 		count_limit: 1,
 		item_category: "@eval enum secondary_item",
 		costs_trophies_instead_of_coins: true,
@@ -371,6 +383,7 @@
 		name: "~Wall Sticker Blocks~",
 		id: "@eval enum item_wall_sticker_block",
 		description: "~Creates throwable blocks which stick to walls, and can be used to create footholds to stand on and climb.~",
+		short_store_description: "[~Spews cubic bubbles at the wall\\nthat give you a platform to jump on.~]",
 		count_limit: 1,
 		item_category: "@eval enum secondary_item",
 		costs_trophies_instead_of_coins: true,
