Partial work towards implementing a health potion.

--- a/data/items.cfg
+++ b/data/items.cfg
@@ -394,6 +394,20 @@
 		hud_img_rect: [0, 84, 39,123],
 	},
 	
+	{
+		name: "~Health Potion~",
+		id: "@eval enum item_health_potion",
+		description: "~Chug and heal.~",
+		short_store_description: "[~This is a health potion which will refill your hitpoints.~]",
+		count_limit: 2,
+		item_category: "@eval enum secondary_item",
+		anim_rect: [160,57,184,81],
+		anim_frame_count: 1,
+		item_use: "def(obj player_controlled player) -> commands if(player is obj frogatto_playable,
+			player.item_behaviour_trigger(enum item_health_potion)
+		)",
+		hud_img_rect: [0, 84, 39,123],
+	},
 	
 	
 	
