--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -439,6 +439,8 @@ properties: {
 		;add_item(enum item_super_arcane_pendant, 1),
 		;add_item(enum item_super_acid_pendant, 1),
 		//  ;add_item(enum item_super_ice_pendant, 1),  omitted; freezing sometimes breaks stuff
+
+		add_item(enum item_health_potion, 2),
 	]",
 
 #-------------------------- omnibus cheat codes --------------------------#
@@ -494,7 +496,8 @@ properties: {
 	item_behaviour_trigger: "def(InventoryItemType item_type) -> commands 
 		switch(	item_type,
 				enum item_wall_sticker_block,  item_fire_wall_sticker_block,
-				enum item_skipback_sigil, item_trigger_skipback_sigil
+				enum item_skipback_sigil, item_trigger_skipback_sigil,
+				enum item_health_potion, item_trigger_health_potion
 		)
 	",
 
@@ -525,6 +528,13 @@ properties: {
 		) where skipback_anchor = find(level.chars, value is obj ability_skipback_sigil_anchor)
 	",
 	
+	item_trigger_health_potion: "commands ::
+		[
+			lib.sound.play_sound(me, 'potion-chug'),
+			set(me.hitpoints, me.max_hitpoints),
+		]
+	",
+
 	
 
 
