HUD icon for the health potion, and consume the potion on usage.

--- a/data/items.cfg
+++ b/data/items.cfg
@@ -394,6 +394,7 @@
 		hud_img_rect: [0, 84, 39,123],
 	},
 	
+#-------------------------- consumable items --------------------------#	
 	{
 		name: "~Health Potion~",
 		id: "@eval enum item_health_potion",
@@ -406,7 +407,7 @@
 		item_use: "def(obj player_controlled player) -> commands if(player is obj frogatto_playable,
 			player.item_behaviour_trigger(enum item_health_potion)
 		)",
-		hud_img_rect: [0, 84, 39,123],
+		hud_img_rect: [0, 168, 39,207],
 	},
 	
 	
