--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -532,6 +532,7 @@ properties: {
 		[
 			lib.sound.play_sound(me, 'potion-chug'),
 			set(me.hitpoints, me.max_hitpoints),
+			add_item(enum item_health_potion, -1),
 		]
 	",
 
