Made the secondary hud gui disappear when you use up all secondary items.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1494,7 +1494,7 @@ properties: {
 	tear_down_gui: "commands ::
 		[
 			gui_boss_progress_display.reset_boss_list,
-			map(default_hud_components,
+			map(default_hud_components + [gui_secondary_ability_display],
 				remove_object(value)
 			)
 		]
