Added some effects for the heart potion being drunk.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -530,9 +530,12 @@ properties: {
 	
 	item_trigger_health_potion: "commands ::
 		[
-			lib.sound.play_sound(me, 'potion-chug'),
+			lib.sound.play_sound(me, 'potion-chug', {volume: 3.0}),
 			set(me.hitpoints, me.max_hitpoints),
 			add_item(enum item_health_potion, -1),
+			
+			spawn('silhouette_heart',level.player.mid_x,level.player.mid_y,1),
+			map(range(10), spawn('heart_sparkle_large', level.player.mid_x, level.player.y2, 0)),
 		]
 	",
 
