Put in a guard case so that if an object is being removed literally the very first frame it's being created, it'll try to make sure its destructor is the very last thing that fires, so that all of its child objects get removed.

--- a/data/object_prototypes/base/transient_object.cfg
+++ b/data/object_prototypes/base/transient_object.cfg
@@ -49,7 +49,11 @@ properties: {
 					transient_obj_constructor ;
 					hittable_obj_constructor ;
 					epihittable_obj_constructor ;
-					visual_obj_constructor
+					visual_obj_constructor ;
+
+					if(_abort_construction,
+						destructor
+					),
 				])",
 
 	particle_effects_load_fix: "commands :: null",
@@ -74,6 +78,7 @@ properties: {
 		*/
 	_constructed: { type: "bool", default: false, persistent: false },
 	_constructor_guarded: "commands :: ( ; if(not _constructed, [constructor, set(_constructed, true)]))",
+	_abort_construction: { type: "bool", default: false, persistent: false },
 
 		#-- debug flags --#	
 	should_debug_output_constructor_info: "bool :: false",
@@ -90,7 +95,19 @@ properties: {
 					/*
 						If we actually deliberately remove and re-add the attache, we need the constructor to re-fire (once per add-remove cycle).  This is explained at length above.
 					*/
-					set(_constructed, false)
+					set(_constructed, false),
+
+
+					/*
+						Here, again, we have a bizarre and exotic bugfix to work around engine behavior that's probably too dangerous to properly fix.  In the rare case of an object getting 'removed the very moment it's created', our engine shows a really weird wart, which is that the constructor fires ... after ... the destructor.  Yes, you heard that right.
+						
+						The crux of the situation is that, typically, any behavior that would trigger immediate removal of an object tends to happen right -during- on_create, so it happens as a function that's not 'queued up to happen after on_create', but instead, one that's executed deep in the middle of on_create's call stack.  Sometimes multiple constructors fire, just as a defense mechanism (due to multiple code paths leading to an object getting into the level).
+
+						Since it's such a heavy (and dangerous) lift to change that engine behavior, what we're doing instead is setting a flag to let us know, so we can remedy the situation.  We tried just preventing the constructor from running, but there's a fair amount of stuff that asserts if we try that.  Instead, the strategy we're using is cueing on this flag to 'run our destructor at the end of the constructor' if we're getting some kind of destruction call right during the first frame of execution.
+					*/
+					if(me.cycle = 0,
+						set(_abort_construction, true)
+					)
 				])",
 
 
