Flagged throwable small enemies and projectiles to be in the 'thrown' solid dimension, so that they'll bounce off gates and ethereal blocks.  Made said blocks also in that dimension, to enable this (gates already were).

--- a/data/object_prototypes/base/throwable_projectile.cfg
+++ b/data/object_prototypes/base/throwable_projectile.cfg
@@ -17,7 +17,7 @@ always_active: true,
 affected_by_currents: true,
 
 object_level_collisions: true,
-solid_dimensions: [],
+solid_dimensions: ["thrown"],
 
 properties: {
 #-------------------------- constructor/destructor logic --------------------------#
