--- a/data/object_prototypes/base/throwable_small_enemy.cfg
+++ b/data/object_prototypes/base/throwable_small_enemy.cfg
@@ -13,7 +13,7 @@ mass: 5,
 friction: 1000,
 traction: 1000,
 solid_area: [5,10,20,25],
-solid_dimensions: ["enemy","common"],
+solid_dimensions: ["enemy","common","thrown"],
 properties: {
 #-------------------------- constructor/destructor logic --------------------------#
 	epihittable_obj_constructor: "commands :: [
@@ -31,7 +31,7 @@ properties: {
 	attack_damage: "int :: if(animation in ['thrown'], standard_thrown_damage, 1)",
 		
 	on_back_duration: "int :: 200",  #if we're re-running the thrown animation.
-	default_solid_dimensions: "[string] :: ['enemy','common']",
+	default_solid_dimensions: "[string] :: ['enemy','common','thrown']",
 //	default_anim: "string :: 'stand'",
 	basic_type: "string :: regex_replace(me.type,'.thrown','')", 
 	frogourmet_tag: "string :: basic_type",
