--- a/data/objects/props-interactive/obstacles/ethereal_block.cfg
+++ b/data/objects/props-interactive/obstacles/ethereal_block.cfg
@@ -3,7 +3,7 @@ id: "ethereal_block",
 has_feet: false,
 #always_active: true,#
 solid_area: [0,16,31,47],
-solid_dimensions: ["player","common","enemy"],
+solid_dimensions: ["player","common","enemy","thrown"],
 is_strict: true,
 editor_info: {
 	category: "props",
@@ -35,7 +35,7 @@ on_toggled_on: "[
 					set(is_tangible, true),
 					set(animation, 'normal-'+color),
 					set(_top.animation, 'normal-'+color),
-					set(solid_dimensions_in, ['player','common','enemy']),
+					set(solid_dimensions_in, ['player','common','enemy','thrown']),
 					set(alpha,255)
 				]",
 on_toggled_off: "[
