Made the zoomer the only enemy that should be able to trigger ethereal block activators.

--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -150,7 +150,7 @@ properties: {
 	
 	
 		#-- special flags for specific objects --#
-	affects_ethereal_block_triggers: "bool :: true",
+	affects_ethereal_block_triggers: "bool ::  if(team = 'player', true, false)",
 	
 	
 		#-- tools for managing the miniature hitpoint bars --#
