--- a/data/objects/enemies/incorporeal/zoomer.cfg
+++ b/data/objects/enemies/incorporeal/zoomer.cfg
@@ -37,6 +37,11 @@ properties: {
 
 		//must place above flat ground
 	set_initial_position: "if(new_pos = null, debug('Object placement failure - move the following zoomer over solid ground, please: '+ me.label), [set(mid_x, new_pos.x),set(mid_y, new_pos.y-1)]) where new_pos = find_floor(mid_x,mid_y,1000)", 
+
+
+
+		//these should exclusively get used as the enemy to trigger ethereal blocks, since they've got periodic movement, and they also don't die.
+	affects_ethereal_block_triggers: "bool ::  true",
 	
 	
 },
