--- a/data/objects/props-interactive/obstacles/ethereal_block_activator.cfg
+++ b/data/objects/props-interactive/obstacles/ethereal_block_activator.cfg
@@ -32,7 +32,7 @@ on_end_anim: "animation('normal')",
 
 
 on_collide_object_activate: "if( arg.collide_with is obj hittable, (
-								if(arg.collide_with_area in ['body', 'thrown'] and (collide_with.team = 'player' or collide_with.affects_ethereal_block_triggers),
+								if(arg.collide_with_area in ['body', 'thrown', 'attack'] and (collide_with.team = 'player' or collide_with.affects_ethereal_block_triggers),
 									[set(_last_triggered, cycle), if(cycle > _last_triggered + 10, fire_event('bumped'))]
 								)
 							) where collide_with = obj hittable <- arg.collide_with)",
