Put in a boolean flag so that small, regular enemies - despite adding their hitpoints to the boss bar, also show their regular hitpoint bars so players don't get confused.

--- a/data/level/Forest/caustic-cauchemar.cfg
+++ b/data/level/Forest/caustic-cauchemar.cfg
@@ -81,6 +81,7 @@
 							_y2_bound: -1128,
 							_y_bound: -2328,
 							upside_down: true,
+							show_hp_bar_despite_being_a_boss: true,
 							is_a_boss: true
 						}),
 						object('mushroom_jellyfish_spawner', 1248, -1728, {
@@ -89,6 +90,7 @@
 							_y2_bound: -1128,
 							_y_bound: -2328,
 							upside_down: true,
+							show_hp_bar_despite_being_a_boss: true,
 							is_a_boss: true
 						}),
 						object('mushroom_jellyfish_spawner', 1440, -1728, {
@@ -97,6 +99,7 @@
 							_y2_bound: -1128,
 							_y_bound: -2328,
 							upside_down: true,
+							show_hp_bar_despite_being_a_boss: true,
 							is_a_boss: true
 						})
 					])",
