--- a/data/level/Forest/turgid-turn.cfg
+++ b/data/level/Forest/turgid-turn.cfg
@@ -194,25 +194,31 @@
 					
 					where fight_enemies = ([custom_obj] <-[
 						object('fumper_flapper', 1824, 288, {
-							is_a_boss: true
+							is_a_boss: true,
+							show_hp_bar_despite_being_a_boss: true,
 						}),
 						object('fumper_hopper', 1696, 416, {
-							is_a_boss: true
+							is_a_boss: true,
+							show_hp_bar_despite_being_a_boss: true,
 						})
 					])
 					
 					where fight_enemies_part2 = ([custom_obj] <-[
 						object('fumper_hopper', 800, 352, {
-							is_a_boss: true
+							is_a_boss: true,
+							show_hp_bar_despite_being_a_boss: true,
 						}),
 						object('fumper_flapper', 704, 320, {
-							is_a_boss: true
+							is_a_boss: true,
+							show_hp_bar_despite_being_a_boss: true,
 						}),
 						object('fumper_flapper', 1504, 96, {
-							is_a_boss: true
+							is_a_boss: true,
+							show_hp_bar_despite_being_a_boss: true,
 						}),
 						object('fumper_flapper', 1056, 96, {
-							is_a_boss: true
+							is_a_boss: true,
+							show_hp_bar_despite_being_a_boss: true,
 						})
 					])
 					
