--- a/data/level/Seaside/crevice-village-cave.cfg
+++ b/data/level/Seaside/crevice-village-cave.cfg
@@ -99,10 +99,26 @@
 									)
 		   ]
 			 #definition of the new kitty#
-			 where new_kitties = [object('kitty_spear',midpoint_x,midpoint_y,{facing:facing, is_a_boss:true}),
-			 object('kitty_spear',977,362,{facing:1, is_a_boss:true}),
-			 object('kitty_spear',862,383,{facing:1, is_a_boss:true}),
-			 object('kitty_gun',557,318,{facing:1, is_a_boss:true})
+			 where new_kitties = [object('kitty_spear',midpoint_x,midpoint_y,{
+			 	facing: 1,
+			 	is_a_boss: true,
+				show_hp_bar_despite_being_a_boss: true,
+			 }),
+			 object('kitty_spear',977,362,{
+			 	facing: 1,
+			 	is_a_boss: true,
+				show_hp_bar_despite_being_a_boss: true,
+			 }),
+			 object('kitty_spear',862,383, {
+			 	facing: 1,
+			 	is_a_boss: true,
+				show_hp_bar_despite_being_a_boss: true,
+			 }),
+			 object('kitty_gun',557,318, {
+			 	facing: 1,
+			 	is_a_boss: true,
+				show_hp_bar_despite_being_a_boss: true,
+			 })
 		 ]",
 		},
 		{
