--- a/data/object_prototypes/base/hittable.cfg
+++ b/data/object_prototypes/base/hittable.cfg
@@ -35,6 +35,7 @@ properties: {
 	time_last_knocked_something_back: { type: "int", default: 0, persistent: false },
 	attributes: { type: "{string->string}", default: {}, persistent: false }, 
 	is_a_boss: { type: "bool", default: false, persistent: true },
+	show_hp_bar_despite_being_a_boss: { type: "bool", default: false, persistent: true },
 	_preexisting_object: { type: "bool", default: false },
 	original_level_we_spawned_on: { type: "string", dynamic_initialization: true },
 	currently_forcing_death: { type: "bool", default: false },
@@ -154,7 +155,7 @@ properties: {
 	
 	
 		#-- tools for managing the miniature hitpoint bars --#
-	has_mini_hp_bar: "bool :: if(is_a_boss, false, true)",
+	has_mini_hp_bar: "bool :: if(is_a_boss and (not show_hp_bar_despite_being_a_boss), false, true)",
 	attach_mini_hp_bar:	"commands :: if(has_mini_hp_bar, add_object(hp_bar_obj) )",
 	hp_bar_obj: {
 		type: "obj hp_bar_attache", 
