--- a/data/level/Cave/subterranean-scuffle.cfg
+++ b/data/level/Cave/subterranean-scuffle.cfg
@@ -366,31 +366,36 @@
 							_desired_height: 384,
 							_x2_bound: 1248,
 							_x_bound: 112,
-							is_a_boss: true
+							is_a_boss: true,
+							show_hp_bar_despite_being_a_boss: true,
 						}),
 						object('worm_jumping', 736, 320, {
 							_desired_height: 384,
 							_x2_bound: 1248,
 							_x_bound: 112,
-							is_a_boss: true
+							is_a_boss: true,
+							show_hp_bar_despite_being_a_boss: true,
 						}),
 						object('worm_jumping', 192, 320, {
 							_desired_height: 384,
 							_x2_bound: 1248,
 							_x_bound: 112,
-							is_a_boss: true
+							is_a_boss: true,
+							show_hp_bar_despite_being_a_boss: true,
 						}),
 						object('worm_jumping', 288, 320, {
 							_desired_height: 384,
 							_x2_bound: 1248,
 							_x_bound: 112,
-							is_a_boss: true
+							is_a_boss: true,
+							show_hp_bar_despite_being_a_boss: true,
 						}),
 						object('worm_jumping', 1152, 320, {
 							_desired_height: 384,
 							_x2_bound: 1248,
 							_x_bound: 112,
-							is_a_boss: true
+							is_a_boss: true,
+							show_hp_bar_despite_being_a_boss: true,
 						})
 					])",
 			"property_data": {
