Changed our treasure chests to default to giving out the biggest kind of gold coin, and also changed that biggest kind of coin to be worth 50 gold instead of 100.

--- a/data/objects/props-interactive/misc/treasure_chest.cfg
+++ b/data/objects/props-interactive/misc/treasure_chest.cfg
@@ -23,7 +23,7 @@ properties: {
 #-------------------------- vars --------------------------#
 	_loot: { type: "[obj item_acquirable]", init: "[]", persistent: false },
 	event_name: { type: "string", default: "", editor_info: { type: "text" } },
-	spawn_type: { type: "string", default: "coin_gold_big", editor_info: { type: "text", value: "'coin_gold_big'" } },
+	spawn_type: { type: "string", default: "coin_gold_enormous", editor_info: { type: "text", value: "'coin_gold_enormous'" } },
 	spawn_properties: { type: "{string -> any}", default: {}, editor_info: { type: "text" } },
 },
 
