Fixed several quality-of-life issues related to savepoints - fixed the issue where there was an initial delay on triggering them for ones near the start of a level, and also made it so when you respawn and they visually activate, they don't play the sound.

--- a/data/objects/props-interactive/misc/save_statue.cfg
+++ b/data/objects/props-interactive/misc/save_statue.cfg
@@ -11,6 +11,7 @@ properties: {
 	activate:  "commands :: [
 					set(_last_triggered,cycle),
 				    visually_activate,
+				    audibly_activate,
 				    save_game(),
 				    checkpoint_game(),
 					title(~The game has been saved.~),
@@ -59,6 +60,9 @@ properties: {
 	visually_activate: "[
 					_particles.turn_on,
 					add_object(_fire_glow),
+				]",
+				
+	audibly_activate: "[
 					lib.sound.play_sound(me,'SaveFrog.ogg'),
 				]",
 				
@@ -69,7 +73,7 @@ properties: {
 
 	is_player_within_bounds:  "bool :: (level.player.mid_x > _x_bound and level.player.mid_x <_x2_bound and level.player.mid_y > _y_bound and level.player.mid_y < _y2_bound and level.player.hitpoints > 0)",
 	
-	has_not_triggered_recently: "bool :: (cycle - _last_triggered > 100)",
+	has_not_triggered_recently: "bool :: (me.cycle - _last_triggered > 100)",
 
 	/*
 		Somewhat non-obvious; we use the rectangular area (assumed to be really close and tight, and to cover e.g. vertical passageways completely) to handle triggering the save.  However, to handle "making it possible to re-trigger this save point", we use a much wider, much more greedy circular radius.  Essentially all this is for is to prevent spamming the "game has been saved" message over and over if the player stands/walks near a save point.
@@ -118,6 +122,16 @@ properties: {
 		add_object(_particles)
 		;
 		deactivate
+		;
+
+
+	/*
+		We have a weird 'guard value' `_player_has_left_bounds` which we use to keep the player from respawning at a save point, and instantly saving.  However, it also causes issues with save points which are near the beginnings of level starts, so we do a quick check on load to see if the condition we're trying to prevent is even an issue, and if it's not, then we just flip that flag.
+	*/
+		if(
+			(not is_player_within_bounds),
+			set(_player_has_left_bounds, true)
+		)		
 	]",
 	
 #-------------------------- vars --------------------------#
@@ -140,7 +154,8 @@ on_load: "	[
 				*/
 				if(nearest_save_statue != null,
 					if(player_is_near_statue(nearest_save_statue, 100),
-					nearest_save_statue.visually_activate)
+						nearest_save_statue.visually_activate
+					)
 				)
 				where nearest_save_statue =
 					head(
