Forcibly trigger a phantom save point after prospera's workshop cutscene.

--- a/data/level/Forest/prosperas-workshop.cfg
+++ b/data/level/Forest/prosperas-workshop.cfg
@@ -301,6 +301,10 @@
 						set(level.zoom, 1.0),
 						set(level.focus, []),							
 						end_skip_dialog_sequence(),
+						schedule(1, [
+							save_game(),
+							checkpoint_game(),
+						]),
 						schedule(1, ; set(level.lock_screen, null)),
 						frogatto.remove_control_lock('prospera_cutscene'),
 						level.player.store_event('introduced_prosperas_workshop', 1),
